--- a/assets/css/theme2.scss
+++ b/assets/css/theme2.scss
@@ -3,4 +3,4 @@
 ---
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin2 }}";
-@import "minimal-mistakes/main";
+@import "minimal-mistakes";
