--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,16 @@
 </div>
 
 <div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} {{ site.title | default: site.title }}.
+
+  <p style="font-size: 0.8em;">
+    O conteúdo deste guia é licenciado sob uma 
+    <a href="https://creativecommons.org/licenses/by/4.0/deed.pt" rel="nofollow">Licença Creative Commons Atribuição 4.0 Internacional (CC BY 4.0)</a>.
+    Você é livre para compartilhar e adaptar o material, desde que dê o crédito apropriado ao <b>Guia GAC Brasil</b>.
+  </p>
   
-  <br><br>
+  <br>
   
   <p style="font-size: 0.8em; color: #777;">
-    **Isenção de Responsabilidade:** Esta é uma base de conhecimento colaborativa e **não oficial**. Não possuímos qualquer afiliação, vínculo ou endosso da marca GAC. As informações aqui contidas são fornecidas como um guia da comunidade, mas podem conter imprecisões. **O usuário deve sempre verificar as informações com o manual oficial e/ou um profissional qualificado.** A plataforma e seus colaboradores não se responsabilizam por quaisquer ações tomadas com base neste conteúdo. O uso é de sua responsabilidade.
+    <b>Isenção de Responsabilidade:</b> Esta é uma base de conhecimento colaborativa e <b>não oficial</b>. Não possuímos qualquer afiliação, vínculo ou endosso da marca GAC. As informações aqui contidas são fornecidas como um guia da comunidade, mas podem conter imprecisões. <b>O usuário deve sempre verificar as informações com o manual oficial e/ou um profissional qualificado.</b> A plataforma e seus colaboradores não se responsabilizam por quaisquer ações tomadas com base neste conteúdo. O uso é de sua responsabilidade.
   </p>
 </div>
